--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://www.justinwaltrip.com/'
 languageCode = 'en-us'
 title = 'Justin Waltrip'
 theme = "hugo-coder"
