--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://www.justinwaltrip.com/'
+baseURL = 'https://justinwaltrip.github.io'
 languageCode = 'en-us'
 title = 'Justin Waltrip'
 theme = "hugo-coder"
