--- a/config.toml
+++ b/config.toml
@@ -120,13 +120,18 @@ weight = 1
 url = "about/"
 
 [[languages.en.menu.main]]
+  name = "Blog"
+  weight = 2
+  url  = "posts/"
+
+[[languages.en.menu.main]]
 name = "Projects"
 weight = 3
 url = "projects/"
 
 [[languages.en.menu.main]]
 name = "Contact me"
-weight = 5
+weight = 4
 url = "contact/"
 
 [markup]
