--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://justinwaltrip.github.io"
+baseURL = "https://www.justinwaltrip.com/"
 languageCode = "en-us"
 title = "Justin Waltrip"
 theme = "hugo-coder"
