feat: Add devenv configuration and update personal information

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ enableEmoji = true
 author = "Justin Waltrip"
 description = "Justin Waltrip's personal website"
 keywords = "developer,personal"
-info = ["Data Scientist"]
+info = ["Co-founder & Head of Engineering at Squary AI"]
 avatarURL = "images/avatar.jpg"
 dateFormat = "January 2, 2006"
 since = 2022
