--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 **/.DS_Store
+
+# Devenv
+.devenv*
+devenv.local.nix
+devenv.local.yaml
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
