--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,6 @@ languageCode = "en-us"
 title = "Justin Waltrip"
 theme = "hugo-coder"
 defaultContentLanguage = "en"
-paginate = 20
 pygmentsStyle = "bw"
 pygmentsCodeFences = true
 pygmentsCodeFencesGuessSyntax = true
@@ -37,6 +36,9 @@ customCSS = []
 customSCSS = []
 # Custom JS
 customJS = []
+
+[pagination]
+pagerSize = 20
 
 # If you want to use fathom(https://usefathom.com) for analytics, add this section
 # [params.fathomAnalytics]
